--- a/tareas/src/main/resources/templates/index.fxml
+++ b/tareas/src/main/resources/templates/index.fxml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gm.tareas.controlador.IndexControlador">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gm.tareas.controlador.IndexControlador">
    <children>
-      <Label layoutX="244.0" layoutY="191.0" text="Sistema de Tareas" />
+      <Label layoutX="193.0" layoutY="31.0" text="Sistema de Tareas" textFill="#e63946">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font></Label>
+      <TableView fx:id="tareaTabla" layoutX="120.0" layoutY="100.0" prefHeight="200.0" prefWidth="360.0">
+        <columns>
+            <TableColumn fx:id="idTareaColumna" prefWidth="75.0" text="ID" />
+            <TableColumn fx:id="nombreTareaColumna" prefWidth="75.0" text="Tarea" />
+            <TableColumn fx:id="responsableColumna" prefWidth="101.0" text="Responsable" />
+            <TableColumn fx:id="estatusColumna" prefWidth="75.0" text="Estatus" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
