--- a/tareas/src/main/resources/templates/index.fxml
+++ b/tareas/src/main/resources/templates/index.fxml
@@ -1,24 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gm.tareas.controlador.IndexControlador">
+<AnchorPane prefHeight="396.0" prefWidth="665.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gm.tareas.controlador.IndexControlador">
    <children>
       <Label layoutX="193.0" layoutY="31.0" text="Sistema de Tareas" textFill="#e63946">
          <font>
             <Font name="System Bold" size="25.0" />
          </font></Label>
-      <TableView fx:id="tareaTabla" layoutX="120.0" layoutY="100.0" prefHeight="200.0" prefWidth="360.0">
+      <TableView fx:id="tareaTabla" layoutX="236.0" layoutY="98.0" onMouseClicked="#cargarTareaFormulario" prefHeight="200.0" prefWidth="391.0">
         <columns>
-            <TableColumn fx:id="idTareaColumna" prefWidth="75.0" text="ID" />
-            <TableColumn fx:id="nombreTareaColumna" prefWidth="75.0" text="Tarea" />
-            <TableColumn fx:id="responsableColumna" prefWidth="101.0" text="Responsable" />
-            <TableColumn fx:id="estatusColumna" prefWidth="75.0" text="Estatus" />
+            <TableColumn fx:id="idTareaColumna" prefWidth="30.0" text="ID" />
+            <TableColumn fx:id="nombreTareaColumna" prefWidth="144.0" text="Tarea" />
+            <TableColumn fx:id="responsableColumna" prefWidth="113.0" text="Responsable" />
+            <TableColumn fx:id="estatusColumna" prefWidth="90.0" text="Estatus" />
         </columns>
       </TableView>
+      <AnchorPane layoutX="45.0" layoutY="98.0" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <Label layoutX="14.0" layoutY="14.0" text="Tarea" textFill="#45799b">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="74.0" text="Responsable" textFill="#45799b">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="134.0" text="Estatus" textFill="#45799b">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <TextField fx:id="nombreTareaTexto" layoutX="14.0" layoutY="32.0" />
+            <TextField fx:id="responsableTexto" layoutX="14.0" layoutY="92.0" />
+            <TextField fx:id="estatusTexto" layoutX="14.0" layoutY="152.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="45.0" layoutY="321.0" prefHeight="36.0" prefWidth="596.0">
+         <children>
+            <Button fx:id="agregarBoton" layoutX="24.0" layoutY="5.0" mnemonicParsing="false" onAction="#agregarTarea" style="-fx-background-color: #1d3557;" text="Agregar" textFill="#f1faee" />
+            <Button fx:id="modificarBoton" layoutX="160.0" layoutY="5.0" mnemonicParsing="false" style="-fx-background-color: #1f3557;" text="Modificar" textFill="#f1faee" />
+            <Button fx:id="eliminarBoton" layoutX="304.0" layoutY="5.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="76.0" style="-fx-background-color: e63946;" text="Eliminar" textFill="#f1faee" />
+            <Button fx:id="limpiarBoton" layoutX="426.0" layoutY="5.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="150.0" style="-fx-background-color: ffd60A;" text="Limpiar Formulario" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
