--- a/contactos/src/main/resources/templates/index.html
+++ b/contactos/src/main/resources/templates/index.html
@@ -21,6 +21,7 @@
                             <th scope="col">Nombre</th>
                             <th scope="col">Teléfono</th>
                             <th scope="col">Email</th>
+                            <th scope="col"></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -29,6 +30,11 @@
                             <td th:text="${contacto.nombre}"></td>
                             <td th:text="${contacto.telefono}"></td>
                             <td th:text="${contacto.email}"></td>
+                            <td class="text-center">
+                                <div class="container">
+                                    <a th:href="@{/editar/{id}(id=${contacto.idContacto})}" class="btn btn-warning btn-sm me-3">Editar</a>
+                                </div>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
