--- a/inventario-app/src/app/producto-lista/producto-lista.component.html
+++ b/inventario-app/src/app/producto-lista/producto-lista.component.html
@@ -3,34 +3,24 @@
         <h3>Sistema de Inventarios</h3>
     </div>
 
-<table class="table table-striped table-hover align-middle">
-  <thead>
-    <tr>
-      <th scope="col">Id</th>
-      <th scope="col">Descripción del Producto</th>
-      <th scope="col">Precio</th>
-      <th scope="col">Existencias</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>John</td>
-      <td>Doe</td>
-      <td>social</td>
-    </tr>
-  </tbody>
-</table>
+  <table class="table table-striped table-hover align-middle">
+    <thead>
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Descripción del Producto</th>
+        <th scope="col">Precio</th>
+        <th scope="col">Existencias</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for(producto of productos; track producto.idProducto){
+      <tr>
+        <th scope="row">{{producto.idProducto}}</th>
+        <td>{{producto.descripcion}}</td>
+        <td>{{producto.precio}}</td>
+        <td>{{producto.existencia}}</td>
+      </tr>
+    }
+    </tbody>
+  </table>
 </div>
