--- a/inventario-app/src/app/app.component.html
+++ b/inventario-app/src/app/app.component.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="productos" routerLinkActive="Active">Inicio</a>
+          <a class="nav-link active" aria-current="page" routerLink="productos" routerLinkActive="active">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/agregar-producto">Agregar Producto</a>
+          <a class="nav-link" routerLink="agregar-producto" routerLinkActive="active">Agregar Producto</a>
         </li>
       </ul>
     </div>
