--- a/inventario-app/src/app/editar-producto/editar-producto.component.html
+++ b/inventario-app/src/app/editar-producto/editar-producto.component.html
@@ -1,1 +1,29 @@
-<p>editar-producto works!</p>
+<div class="container">
+    <div class="contanier text-center" style="margin: 30px;">
+        <h3>Editar Producto</h3>
+    </div>
+
+    <form (ngSubmit)="onSubmit()">  
+        <div class="mb-3">
+            <label for="descripcion" class="form-label">Descripción del Producto</label>
+            <input type="email" class="form-control" id="descripcion" name="descripcion"
+            [(ngModel)]="producto.descripcion">
+        </div>
+        <div class="mb-3">
+            <label for="precio" class="form-label">Precio</label>
+            <input type="number" step="any" class="form-control" id="precio" name="precio"
+            [(ngModel)]="producto.precio">
+
+        </div>
+        <div class="mb-3">
+            <label for="existencia" class="form-label">Existencias</label>
+            <input type="number" class="form-control" id="existencia" name="existencia"
+            [(ngModel)]="producto.existencia">
+
+        </div>
+        <div class="text-center">
+            <button type="submit" class="btn btn-warning btn-sm me-3">Guardar</button>
+            <a href="/" class="btn btn-danger btn-sm">Regresar</a>
+        </div>
+    </form>
+</div>
