--- a/inventario-app/src/app/producto-lista/producto-lista.component.html
+++ b/inventario-app/src/app/producto-lista/producto-lista.component.html
@@ -24,6 +24,7 @@
         <td class="text-center">
           <div>
             <button (click)="editarProducto(producto.idProducto)" class="btn btn-warning btn-sm me-3">Editar</button>
+            <button (click)="eliminarProducto(producto.idProducto)" class="btn btn-danger btn-sm">Eliminar</button>
           </div>
         </td>
       </tr>
